--- a/src/Component/Admin/SideBar.scss
+++ b/src/Component/Admin/SideBar.scss
@@ -62,11 +62,6 @@ $nav-width-expanded: 250px;
     &::-webkit-scrollbar-track {
         background-color: transparent; // Màu nền cho track
     }
-    // &:hover,
-    // &.expanded {
-    //     width: $nav-width-expanded;
-    //     overflow: visible;
-    // }
 
     ul {
         margin: 7px 0;
@@ -213,3 +208,10 @@ hr {
     margin: 20px 0; // Khoảng cách phía trên và dưới đường kẻ (tuỳ chỉnh)
 }
 
+.expanded .main-menu {
+    width: 250px;
+}
+
+.collapsed .main-menu {
+    width: 80px;
+}
