--- a/src/Component/Admin/SideBar.scss
+++ b/src/Component/Admin/SideBar.scss
@@ -6,21 +6,25 @@
     width: 250px; /* Độ rộng của sidebar */
     height: 100%;
     z-index: 999;
-    background-color: #2c3e50; 
+    background-image: url('../../assets/image/gym2.jpg'); /* Đường dẫn tới ảnh nền */
+    background-size: cover; /* Đảm bảo ảnh bao phủ toàn bộ khu vực */
+    background-repeat: no-repeat; /* Không lặp lại ảnh */
+    background-position: center; /* Căn giữa ảnh nền */
     color: #fff; 
     transition: all 0.3s ease; 
     overflow-y: hidden; /* Ẩn thanh cuộn dọc */
-    
-    /* Lớp phủ để làm mờ nền (nếu cần) */
+
+    /* Xóa lớp phủ background trước */
     &::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.4); /* Lớp phủ màu đen với độ mờ 40% */
-        z-index: -1;
+        display: none; /* Không hiển thị lớp phủ nữa */
+    }
+
+    .menu-item {
+        margin-bottom: 3rem; // Tạo khoảng cách giữa các mục
+    }
+
+    .submenu {
+        margin-bottom: 1rem; // Tạo khoảng cách giữa các SubMenu
     }
 }
 
@@ -48,8 +52,8 @@
 }
 
 .profile-image {
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     margin-right: 15px;
     object-fit: cover; /* Giúp ảnh vừa vặn với hình tròn */
@@ -99,7 +103,7 @@
 
 /* Định dạng cho submenus */
 .ProSidebar-submenu {
-    background-color: rgba(0, 0, 0, 0.4); /* Lớp nền cho submenu */
+    background-color: rgba(221, 188, 188, 0.4); /* Lớp nền cho submenu */
     border-radius: 5px;
     margin-bottom: 15px; /* Thêm khoảng cách giữa submenu */
 }
